k8s/local/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-hockey-server
  namespace: hockey
  labels:
    app: hockey-server
spec:
  type: ClusterIP
  selector:
    app: hockey-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: udp
      protocol: UDP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hockey-nginx-ingress
  namespace: hockey
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hockey.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-hockey-server
            port:
              name: http
